tags/2013-08-29_cppreference/Archive/dccf8c9b79ceccf22bf253b8765fb0b8-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:3:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual StreamFlag Capabilities () = 0;
  ^
main.cpp:4:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual bool CanSeek () = 0;
  ^
main.cpp:5:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual bool CanRead () = 0;
  ^
main.cpp:6:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual bool CanWrite () = 0;
  ^
main.cpp:7:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual bool CanTimeout () = 0;
  ^
main.cpp:8:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual bool EoS () = 0;
  ^
main.cpp:9:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual bool IsOpen () = 0;
  ^
main.cpp:11:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual int ReadTimeout () = 0;
  ^
main.cpp:12:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual int WriteTimeout () = 0;
  ^
main.cpp:14:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual int64 Length () = 0;
  ^
main.cpp:15:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual int64 Position () = 0;
  ^
main.cpp:17:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual void Close () = 0;
  ^
main.cpp:18:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual void Flush () = 0;
  ^
main.cpp:20:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual int64 Seek (int64 position) = 0;
  ^
main.cpp:21:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual int64 Seek (int64 offset, SeekOrigin origin) = 0;
  ^
main.cpp:22:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual int64 SetLength (int64 length) = 0;
  ^
main.cpp:23:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual int64 SetPosition (int64 position) = 0;
  ^
main.cpp:25:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual int PeekByte () = 0;
  ^
main.cpp:26:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual int ReadByte () = 0;
  ^
main.cpp:27:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual lword Read ( byte* bytes, lword count ) = 0;
  ^
main.cpp:28:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual lword Read ( byte* bytes, lword start, lword count ) = 0;
  ^
main.cpp:29:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual lword Read ( void* bytes, lword bytecount ) = 0;
  ^
main.cpp:31:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual void WriteByte ( byte b ) = 0;
  ^
main.cpp:32:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual void Write ( byte* bytes, lword count ) = 0;
  ^
main.cpp:33:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual void Write ( byte* bytes, lword start, lword count ) = 0;
  ^
main.cpp:35:2: error: ‘furrovinememberapi’ does not name a type
  furrovinememberapi virtual ~Stream () {}
  ^
